kubernetes/dawarich/deploy-sidekiq.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: dawarich-sidekiq
  namespace: dawarich

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: dawarich
      app.kubernetes.io/component: sidekiq
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: 'true'
      labels:
        app.kubernetes.io/name: dawarich
        app.kubernetes.io/component: sidekiq
    spec:
      containers:
      - name: sidekiq
        image: freikin/dawarich:1.15.0@sha256:56be3eb19c9a1d735217e8c16283a9ec63e47d91d9d70cdd23102181d51b579b
        command: [bundle, exec, sidekiq]
        args: []
        volumeMounts:
        - name: public
          mountPath: /var/app/public
        - name: watched
          mountPath: /var/app/tmp/imports/watched
        - name: storage
          mountPath: /var/app/storage
      volumes:
      - name: public
        persistentVolumeClaim:
          claimName: dawarich-public
      - name: watched
        persistentVolumeClaim:
          claimName: dawarich-watched
      - name: storage
        persistentVolumeClaim:
          claimName: dawarich-storage
