kubernetes/dawarich/deploy-web.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: dawarich-web
  namespace: dawarich

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: dawarich
      app.kubernetes.io/component: web
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: 'true'
      labels:
        app.kubernetes.io/name: dawarich
        app.kubernetes.io/component: web
    spec:
      containers:
      - name: web
        image: freikin/dawarich:1.15.0@sha256:56be3eb19c9a1d735217e8c16283a9ec63e47d91d9d70cdd23102181d51b579b
        command: [web-entrypoint.sh]
        args: [bin/rails, server, -p, '3000', -b, '::']
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: public
          mountPath: /var/app/public
        - name: watched
          mountPath: /var/app/tmp/imports/watched
        - name: storage
          mountPath: /var/app/storage
      volumes:
      - name: public
        persistentVolumeClaim:
          claimName: dawarich-public
      - name: watched
        persistentVolumeClaim:
          claimName: dawarich-watched
      - name: storage
        persistentVolumeClaim:
          claimName: dawarich-storage
