kubernetes/dawarich/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: dawarich
  namespace: dawarich

spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app.kubernetes.io/name: dawarich
    app.kubernetes.io/component: web
